# nagChatBot

./: .env  README.md  chatbot.py  chatbotWithHuggingFace.py  chatbottest  main.py  pyproject.toml  requirements.txt
app/: rag_chatbot.py
faiss_index/: index.faiss  index.pkl
faiss_pdfHFindex/: index.faiss  index.pkl
faiss_pdfindex/: index.faiss  index.pkl
tests/: ragas_evaluation.py  test_chatbot.py  test_data.py  test_memory.py  test_retrieval.py
